fix: disable bouncing scrolling at top and bottom of the page on ios

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#page {
+    height: 100svh;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
